Adicionando pagina Home no React native

--- a/front-mob/app.json
+++ b/front-mob/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "front-mobile",
-    "slug": "front-mobile",
+    "name": "front-mob",
+    "slug": "front-mob",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
